--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "backend/server.js",
   "scripts": {
     "dev": "concurrently \"nodemon backend/server.js\" \"cd frontend && npm start\"",
-    "start": "node backend/server.js",
-    "start-frontend": "serve -s frontend/dist"
+    "start": "node backend/server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.7",
-    "serve": "^14.2.4"
+    "nodemon": "^3.1.7"
   },
   "devDependencies": {
     "concurrently": "^9.0.1"
